--- a/semiProject/src/main/resources/templates/admin/noticeManage.html
+++ b/semiProject/src/main/resources/templates/admin/noticeManage.html
@@ -6,7 +6,7 @@
 
     <!-- 관리자 전용 공지사항 작성 버튼 -->
     <!-- 기존 board 글쓰기 기능 재사용 (boardCode = 4) -->
-    <a href="/board/write?boardCode=4" class="btn-write">
+    <a th:href="@{/editBoard/{boardCode}/insert(boardCode=4)}" class="btn-write">
       글작성
     </a>
   </div>
