[Update + FIX] 메인페이지 구현 및 마이페이지 컨트롤러(detailAddress) 에러 처리

--- a/semiProject/src/main/resources/templates/board/boardWrite.html
+++ b/semiProject/src/main/resources/templates/board/boardWrite.html
@@ -44,38 +44,6 @@
       >
         <div id="board-write">
           <div id="board-info">
-            <select name="boardCode" id="board-type">
-              <option
-                value="1"
-                th:text="'자유 게시판'"
-                th:selected="${boardCode == 1}"
-              >
-                자유 게시판
-              </option>
-              <!-- 정보 게시판 -->
-              <option
-                value="3"
-                th:text="'봉사후기'"
-                th:selected="${boardCode == 3}"
-              >
-                봉사후기
-              </option>
-              <option
-                value="4"
-                th:if="${session.loginMember?.authority == 2}"
-                th:text="'공지사항'"
-                th:selected="${boardCode == 4}"
-              >
-                공지사항
-              </option>
-              <option
-                value="5"
-                th:text="'고객지원'"
-                th:selected="${boardCode == 5}"
-              >
-                고객지원
-              </option>
-            </select>
             <div id="board-info-text">
               <input
                 type="text"
@@ -83,6 +51,7 @@
                 placeholder="제목을 입력해주세요."
                 name="title"
                 th:value="${boardInfo != null ? boardInfo.boardTitle : ''}"
+                maxlength="40"
               />
             </div>
             <div id="secret-wrapper" style="display: none">
@@ -192,7 +161,7 @@
     </script>
     <script th:inline="javascript">
       const boardInfo = /*[[${boardInfo}]]*/ "보드정보";
-      console.log(boardInfo);
+      const boardCode = /*[[${boardCode}]]*/ 0;
     </script>
     <script src="/js/board/boardWrite.js"></script>
   </body>
