--- a/semiProject/src/main/resources/templates/common/header.html
+++ b/semiProject/src/main/resources/templates/common/header.html
@@ -1,62 +1,72 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Document</title>
-<link rel="stylesheet" href="/css/common/header.css" />
-</head>
-<body>
-	<header>
-		<section id="header-content-1">
-			<ul id="user">
-				<th:block th:if="${session.loginMember == null}">
-					<li><a th:href="@{/member/login}" id="loginText">로그인</a></li>
-					<li><a th:href="@{/member/signup}" id="signInText">회원가입</a></li>
-				</th:block>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="/css/common/header.css" />
+  </head>
+  <body>
+    <header>
+      <section id="header-content-1">
+        <ul id="user">
+          <th:block th:if="${session.loginMember == null}">
+            <li><a th:href="@{/member/login}" id="loginText">로그인</a></li>
+            <li><a th:href="@{/member/signup}" id="signInText">회원가입</a></li>
+          </th:block>
 
-				<th:block th:unless="${session.loginMember == null}">
-					<li><b th:text="${session.loginMember.memberNickname}">사용자</b>님
-						환영합니다.</li>
-					<li><a th:href="@{/member/logout}" id="loginText">로그아웃</a></li>
-					<li><a th:href="@{/mypage/profile}" id="signInText">마이페이지</a></li>
-				</th:block>
-			</ul>
-		</section>
-		<div id="header">
-			<!-- home으로 -> "/" -->
-			<a href="/"> <img src="/images/logo.jpg" alt="logo" id="logo" />
-			</a>
-			<nav id="nav">
-				<ul id="navigation">
-					<th:block th:each="boardType : ${application.boardTypeList}">
+          <th:block th:unless="${session.loginMember == null}">
+            <li>
+              <b th:text="${session.loginMember.memberNickname}">사용자</b>님
+              환영합니다.
+            </li>
+            <li><a th:href="@{/member/logout}" id="loginText">로그아웃</a></li>
+            <li>
+              <a th:href="@{/mypage/profile}" id="signInText">마이페이지</a>
+            </li>
+          </th:block>
+        </ul>
+      </section>
+      <div id="header">
+        <!-- home으로 -> "/" -->
+        <a href="/"> <img src="/images/logo.jpg" alt="logo" id="logo" /> </a>
+        <nav id="nav">
+          <ul id="navigation">
+            <th:block th:each="boardType : ${application.boardTypeList}">
+              <!-- 정보게시판 -->
+              <li class="navList" th:if="${boardType.boardCode == 2}">
+                <a
+                  th:href="@{/info/listPage}"
+                  th:text="${boardType.boardName}"
+                ></a>
+              </li>
 
-					<!-- 정보게시판 -->
-					<li class="navList" th:if="${boardType.boardCode == 2}">
-    					<a th:href="@{/info/listPage}" th:text="${boardType.boardName}"></a>
-					</li>
+              <!-- 일반 게시판 -->
+              <li
+                class="navList"
+                th:if="${boardType.boardCode != 2 and boardType.boardCode != 6}"
+              >
+                <a
+                  th:href="@{/board/{boardCode}(boardCode=${boardType.boardCode})}"
+                  th:text="${boardType.boardName}"
+                ></a>
+              </li>
 
-					<!-- 일반 게시판 -->
-					<li class="navList" th:if="${boardType.boardCode != 2 and boardType.boardCode != 6}">
-						<a th:href="@{/board/{boardCode}(boardCode=${boardType.boardCode})}"
-						th:text="${boardType.boardName}"></a>
-					</li>
-
-						<!-- 관리자 게시판 -->
-						<li class="navList"
-							th:if="${boardType.boardCode == 6 
+              <!-- 관리자 게시판 -->
+              <li
+                class="navList"
+                th:if="${boardType.boardCode == 6 
               and session.loginMember != null 
-              and session.loginMember.authority == 2}">
-							<a th:href="@{/admin/member}" th:text="${boardType.boardName}">
-						</a>
-						</li>
-
-					</th:block>
-
-				</ul>
-			</nav>
-			<div></div>
-		</div>
-	</header>
-</body>
+              and session.loginMember.authority == 2}"
+              >
+                <a th:href="@{/admin/member}" th:text="${boardType.boardName}">
+                </a>
+              </li>
+            </th:block>
+          </ul>
+        </nav>
+        <div></div>
+      </div>
+    </header>
+  </body>
 </html>
