[Add] 고객지원 게시판 댓글 권한 체크
- 관리자만 댓글 작성 가능
- 클라이언트 값 신뢰 제거
→ DB 조회로 검증
- CommentService: selectBoardWriter()
추가"

--- a/semiProject/src/main/resources/templates/board/boardDetail.html
+++ b/semiProject/src/main/resources/templates/board/boardDetail.html
@@ -142,6 +142,12 @@
       let likeCheck = Number(/*[[${boardInfo.likeCheck}]]*/ 0);
       let scrapCheck = Number(/*[[${boardInfo.scrapCheck}]]*/ 0);
 
+      const boardWriter = /*[[${boardInfo.memberNo}]]*/ 0;
+      const loginAuthority = /*[[${session.loginMember?.authority}]]*/ null;
+      
+
+
+
       // 디버깅: boardCode 값 확인
       console.log("현재 boardCode:", boardCode, "타입:", typeof boardCode);
     </script>
