--- a/semiProject/src/main/resources/templates/board/boardDetail.html
+++ b/semiProject/src/main/resources/templates/board/boardDetail.html
@@ -43,6 +43,44 @@
         </div>
       </div>
       <div id="content">
+        <th:block th:if="${boardInfo.boardCode == 3}">
+          <div id="v-info-detail">
+            <div class="v-detail-row">
+              <div class="v-detail-item">
+                <div class="v-detail-label">봉사기간</div>
+                <div class="v-detail-value">
+                  <span th:text="*{volunteerStart}">시작일</span>
+                  <th:block
+                    th:if="*{volunteerStart != null and volunteerEnd != null}"
+                  >
+                    ~
+                  </th:block>
+                  <span th:text="*{volunteerEnd}">종료일</span>
+                </div>
+              </div>
+              <div class="v-detail-item">
+                <div class="v-detail-label">봉사분야</div>
+                <div class="v-detail-value" th:text="*{volunteerCategory}">
+                  기타
+                </div>
+              </div>
+            </div>
+            <div class="v-detail-row">
+              <div class="v-detail-item">
+                <div class="v-detail-label">모집기관</div>
+                <div class="v-detail-value" th:text="*{volunteerAgency}">
+                  기관명 없음
+                </div>
+              </div>
+              <div class="v-detail-item">
+                <div class="v-detail-label">봉사자 유형</div>
+                <div class="v-detail-value" th:text="*{volunteerType}">
+                  성인
+                </div>
+              </div>
+            </div>
+          </div>
+        </th:block>
         <p th:utext="*{boardContent}">컨텐츠</p>
       </div>
       <div id="btn">
@@ -107,22 +145,26 @@
           </th:block>
         </div>
       </div>
-      <div id="list-btn"> <!-- 목록 버튼 클릭 시 관리자면 해당 관리자 게시판으로, 일반 사용자면 해당 게시판으로 - 현동근 -->
+      <div id="list-btn">
+        <!-- 목록 버튼 클릭 시 관리자면 해당 관리자 게시판으로, 일반 사용자면 해당 게시판으로 - 현동근 -->
         <!-- 관리자 관점일 때 -->
-        <a th:if="${isAdminView}"
+        <a
+          th:if="${isAdminView}"
           th:href="
             ${boardCode == 4} ? '/admin/notice' :
             (${boardCode == 5} ? '/admin/support' :
-            (${boardCode == 6} ? '/admin/report' : '/'))">
-            목록
-        </a>
-
-        <!-- 일반 사용자 관점일 때 -->
-        <a th:if="${!isAdminView}"
-          th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${cp})}">
+            (${boardCode == 6} ? '/admin/report' : '/'))"
+        >
           목록
         </a>
 
+        <!-- 일반 사용자 관점일 때 -->
+        <a
+          th:if="${!isAdminView}"
+          th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${cp})}"
+        >
+          목록
+        </a>
       </div>
 
       <!-- ===== 댓글 영역 ===== -->
@@ -142,8 +184,7 @@
       let likeCheck = Number(/*[[${boardInfo.likeCheck}]]*/ 0);
       let scrapCheck = Number(/*[[${boardInfo.scrapCheck}]]*/ 0);
 
-      // 디버깅: boardCode 값 확인
-      console.log("현재 boardCode:", boardCode, "타입:", typeof boardCode);
+      const boardInfo = /*[[${boardInfo}]]*/ "게시판 내용";
     </script>
     <script
       src="https://kit.fontawesome.com/c0777c617e.js"
