--- a/semiProject/src/main/resources/templates/board/boardWrite.html
+++ b/semiProject/src/main/resources/templates/board/boardWrite.html
@@ -24,7 +24,7 @@
 
         <form method="post" 
               th:action="${boardInfo == null} ? @{/editBoard/{boardCode}/insert(boardCode=${boardCode})} : @{/editBoard/{boardCode}/{boardNo}/update(boardCode=${boardCode}, boardNo=${boardInfo.boardNo})}" 
-              id="summernote-write">
+              id="summernote-write" enctype="multipart/form-data">
             
             <div id="board-write">
                 <th:block th:if="${boardCode == 3}">
@@ -72,6 +72,21 @@
                             </div>
                         </div>
                     </div>
+
+                    <div id="thumbnail-section">
+                      <div class="v-label">썸네일 등록</div>
+                      <div class="thumbnail-upload-box">
+                          <div class="preview-area">
+                              <img id="profileImg" th:src="${boardInfo?.thumbnailPath ?: '/images/footer-logo.png'}">
+                              <span id="deleteImage">&times;</span>
+                          </div>
+                          
+                          <div class="button-area">
+                              <label for="imageInput" class="select-btn">이미지 선택</label>
+                              <input type="file" name="thumbnail" id="imageInput" accept="image/*" style="display:none;">
+                          </div>
+                      </div>
+                  </div>
                 </th:block>
 
                 <div id="board-info">
