[FIX] 썸네일 삭제 버튼 css 수정

--- a/semiProject/src/main/resources/templates/board/boardWrite.html
+++ b/semiProject/src/main/resources/templates/board/boardWrite.html
@@ -78,7 +78,7 @@
                       <div class="thumbnail-upload-box">
                           <div class="preview-area">
                               <img id="profileImg" th:src="${boardInfo?.thumbnailPath ?: '/images/footer-logo.png'}">
-                              <span id="deleteImage">&times;</span>
+                              <span id="deleteImage">X</span>
                           </div>
                           
                           <div class="button-area">
