--- a/semiProject/src/main/resources/templates/mypage/profile.html
+++ b/semiProject/src/main/resources/templates/mypage/profile.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>마이페이지 - 프로필 관리</title>
+  <title>프로필 관리</title>
   <link rel="stylesheet" href="/css/common/header.css" />
   <link rel="stylesheet" href="/css/mypage/sidebar.css">
   <link rel="stylesheet" href="/css/mypage/profile.css">
@@ -48,28 +48,15 @@
         </div>
 
         <div class="form-group">
-          <label>현재 비밀번호 <span class="required-mark">*</span></label>
-          <input type="password" name="currentPw" id="currentPw" placeholder="정보 수정을 위해 현재 비밀번호를 입력해주세요">
-        </div>
-
-        <div class="form-group">
-          <label>비밀번호 변경</label>
-          <input type="password" name="memberPw" placeholder="변경할 비밀번호를 입력하세요">
-        </div>
-
-        <div class="form-group">
-          <label>비밀번호 변경 확인</label>
-          <input type="password" id="pwConfirm" placeholder="비밀번호를 다시 입력하세요">
-        </div>
-
-        <div class="form-group">
           <label>이메일</label>
           <input type="email" name="memberEmail" th:value="*{memberEmail}" readonly>
         </div>
 
         <div class="form-group">
           <label>전화번호</label>
-          <input type="text" name="memberTel" th:value="*{memberTel}" placeholder="(- 없이 숫자만 입력)" maxlength="11">
+          <input type="text" name="memberTel" id="memberTel" 
+                th:value="*{memberTel}" 
+                placeholder="(- 없이 숫자만 입력)" maxlength="11">
         </div>
 
         <div class="form-group address-group">
