--- a/semiProject/src/main/resources/templates/mypage/scraps.html
+++ b/semiProject/src/main/resources/templates/mypage/scraps.html
@@ -92,7 +92,7 @@
                     <option value="title">제목</option>
                     <option value="content">내용</option> <option value="all">제목+내용</option>
                 </select>
-                <input type="text" name="query" placeholder="검색어 입력">
+                <input type="text" name="query" placeholder="검색어를 입력해주세요">
                 <button type="submit">검색</button>
             </form>
         </main>
