--- a/semiProject/src/main/resources/templates/board/comment.html
+++ b/semiProject/src/main/resources/templates/board/comment.html
@@ -148,7 +148,7 @@
                     or session.loginMember.authority != 2)}">
         <p>고객지원 문의에 대한 답변은 관리자만 작성할 수 있습니다.</p>
     </div>
-
+</div>
 
 <!-- ================================================================ -->
 <!--                     JavaScript 파일 로드                          -->
